<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_calculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/str_calculadora"
        android:textColor="#323232"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caja_resultado"
        android:layout_width="241dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/str_0"
        android:textColor="#303030"
        android:textColorHighlight="#353535"
        android:textColorHint="#222222"
        android:textColorLink="#171717"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_calculadora" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnSiete"
        android:text="@string/str_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_resta" />

    <Button
        android:id="@+id/btn_resta"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnRestar"
        android:text="@string/str_resta"
        app:layout_constraintStart_toEndOf="@+id/btn_suma"
        app:layout_constraintTop_toBottomOf="@+id/caja_resultado" />

    <Button
        android:id="@+id/btn_multi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnMultiplicar"
        android:text="@string/str_multiplicacion"
        app:layout_constraintStart_toEndOf="@+id/btn_resta"
        app:layout_constraintTop_toBottomOf="@+id/caja_resultado" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnDividir"
        android:text="@string/str_divicion"
        app:layout_constraintStart_toEndOf="@+id/btn_multi"
        app:layout_constraintTop_toBottomOf="@+id/caja_resultado" />

    <Button
        android:id="@+id/btn_suma"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnSumar"
        android:text="@string/str_suma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_resultado" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnCuatro"
        android:text="@string/str_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnCinco"
        android:text="@string/str_5"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_8" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnTres"
        android:text="@string/str_3"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/btn_6" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnUno"
        android:text="@string/str_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnNueve"
        android:text="@string/str_9"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toBottomOf="@+id/btn_multi" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnCero"
        android:text="@string/str_0"
        app:layout_constraintStart_toEndOf="@+id/btn_punto"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnC"
        android:text="@string/str_c"
        app:layout_constraintStart_toEndOf="@+id/btn_9"
        app:layout_constraintTop_toBottomOf="@+id/btn_div" />

    <Button
        android:id="@+id/btn_del"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnDel"
        android:text="@string/str_del"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btn_3"
        app:layout_constraintTop_toBottomOf="@+id/btn_ce" />

    <Button
        android:id="@+id/btn_igual"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:onClick="btnIgual"
        android:text="@string/str_igual"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_del" />

    <Button
        android:id="@+id/btn_sqrt"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnSqrt"
        android:text="@string/str_sqrt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_elevado"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnElevado"
        android:text="@string/str_elevado"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btn_sqrt"
        app:layout_constraintTop_toBottomOf="@+id/btn_igual" />

    <Button
        android:id="@+id/btn_mas_menos"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnMasMenos"
        android:text="@string/str_mas_menos"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/btn_3" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnDos"
        android:text="@string/str_2"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_5" />

    <Button
        android:id="@+id/btn_punto"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnPunto"
        android:text="@string/str_punto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_ce"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnC"
        android:text="@string/str_ce"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/btn_6"
        app:layout_constraintTop_toBottomOf="@+id/btn_c" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnSeis"
        android:text="@string/str_6"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toBottomOf="@+id/btn_9" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnOcho"
        android:text="@string/str_8"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_resta" />

</androidx.constraintlayout.widget.ConstraintLayout>